# rudel

./: .gitignore  CONTRIBUTING.md  Cargo.toml  FULL_STRUDEL.md  LICENSE  README.md  todo.md
.github/workflows/: ci.yml
crates/rudel-app/: Cargo.toml  README.md  build.rs
crates/rudel-app/src/: app.rs  editor.rs  icon.rs  main.rs  reference.rs  theme.rs  visualizer.rs  volume.rs
crates/rudel-app/src/app/: panels.rs  routing.rs  samples.rs
crates/rudel-app/src/editor/: blocks.rs  brackets.rs  completion.rs  decorations.rs  edit.rs  highlight.rs  settings.rs  sliders.rs  text.rs  widgets.rs
crates/rudel-app/src/editor/widgets/: analyzer.rs  claviature.rs  geometry.rs  host.rs  options.rs  paint.rs  pianoroll.rs  pitchwheel.rs  query.rs  size.rs  spiral.rs  style.rs  tests.rs  values.rs  visual.rs
crates/rudel-audio/: Cargo.toml  README.md
crates/rudel-audio/benches/: render.rs
crates/rudel-audio/examples/: live.rs  play.rs  samples.rs
crates/rudel-audio/src/: clock.rs  events.rs  lib.rs  sample_map.rs  samples.rs
crates/rudel-core/: Cargo.toml  README.md
crates/rudel-core/src/: color.rs  controls.rs  draw.rs  edo.rs  euclid.rs  fraction.rs  hap.rs  impure.rs  input.rs  lib.rs  modulate.rs  pattern.rs  query.rs  samples.rs  signal.rs  state.rs  timespan.rs  tonal.rs  transforms.rs  transforms2.rs  tune_table.rs  value.rs  voicing.rs  xen.rs
crates/rudel-core/src/controls/: aliases.rs  base.rs  convenience.rs  multi.rs  named.rs  plain.rs  registry.rs  special.rs  tests.rs
crates/rudel-core/src/transforms/: core.rs  mod.rs  pattern_ops.rs  pick.rs
crates/rudel-core/src/transforms/core/: align.rs  higher_order.rs  into_pattern.rs  patternify.rs  random.rs  stepwise.rs  structure.rs  tests.rs  time.rs  value_methods.rs  value_ops.rs
crates/rudel-core/src/transforms/pattern_ops/: choice.rs  control.rs  helpers.rs  morph.rs  numeric.rs  structure.rs  tests.rs  timing.rs  xfade.rs
crates/rudel-core/tests/: parity_oracle.rs
crates/rudel-dsp/: Cargo.toml  README.md
crates/rudel-dsp/benches/: additive.rs  mixer.rs  supersaw.rs  vowel.rs
crates/rudel-dsp/src/: drum.rs  envelope.rs  filter.rs  fm.rs  lib.rs  modulator.rs  oscillator.rs  params.rs  pitch.rs  postfx.rs  sampler.rs  spec.rs  synth.rs  tests.rs  voice.rs  zzfx.rs
crates/rudel-dsp/src/tests/: common.rs  drums.rs  filters.rs  pitch.rs  postfx.rs  sampler.rs  voice.rs
crates/rudel-dsp/tests/: adsr_golden.rs  biquad_golden.json  distortion_golden.rs  lfo_golden.rs  phaser_golden.json  vowel_golden.json  zzfx_golden.rs
crates/rudel-lang/: Cargo.toml  README.md
crates/rudel-lang/benches/: patterns.rs
crates/rudel-lang/examples/: surf.rs
crates/rudel-lang/src/: bindings.rs  lib.rs  preprocess.rs  samples.rs  sliders.rs  tests.rs
crates/rudel-lang/src/bindings/: pattern.rs  prelude.rs  routing.rs
crates/rudel-lang/src/bindings/pattern/: args.rs  callback.rs  convert.rs  generated.rs  methods.rs  modulate.rs  pick.rs  repl.rs
crates/rudel-lang/src/preprocess/: labels.rs  mini.rs  scanner.rs  syntax.rs  widgets.rs
crates/rudel-lang/src/tests/: basics.rs  callbacks.rs  common.rs  controls.rs  modulate.rs  pick.rs  preprocess.rs  repl.rs  routing.rs  samples.rs  signals.rs  structure.rs  tonal.rs  util.rs
crates/rudel-lang/tests/: api_inventory.rs  examples.rs  reference_parity.rs  reference_snapshot.rs  reference_surface.txt
crates/rudel-midi/: Cargo.toml  README.md
crates/rudel-midi/src/: input.rs  lib.rs  note.rs  output.rs  schedule.rs  tests.rs
crates/rudel-mini/: Cargo.toml  README.md
crates/rudel-mini/src/: atom.rs  build.rs  lib.rs  mini.pest  tests.rs
crates/rudel-mini/tests/: common.rs  core_golden.json  mini_golden.json  mini_parity.rs  tonal_golden.json  tonal_parity.rs  transform_parity.rs  tune_table_parity.rs
crates/rudel-mini/tests/common/: mod.rs
crates/rudel-osc/: Cargo.toml  README.md
crates/rudel-osc/src/: lib.rs
docs/: API_INVENTORY.md  STRUDEL_SOURCE.md  UNSUPPORTED.md
tools/: gen_parity_oracle.mjs  generate_tune_table.py
tools/oracle/: .gitignore  README.md  adsr_golden.json  distortion_golden.json  gen_adsr_oracle.mjs  gen_biquad_oracle.mjs  gen_core_oracle.mjs  gen_distortion_oracle.mjs  gen_lfo_oracle.mjs  gen_mini_oracle.mjs  gen_phaser_oracle.mjs  gen_reference_oracle.mjs  gen_tonal_oracle.mjs  gen_tune_table_oracle.mjs  gen_vowel_oracle.mjs  gen_zzfx_oracle.mjs  lfo_golden.json  lib.mjs  package-lock.json  package.json  reference_allowlist.json  reference_golden.json  tonal_golden.json  tune_table_golden.json  zzfx_golden.json
