[package]
name = "rudel-audio"
description = "Real-time clock, scheduler and cpal output for Rudel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rudel-core = { path = "../rudel-core" }
rudel-dsp = { path = "../rudel-dsp" }
cpal = "0.18.0"
crossbeam-channel = "0.5.15"
fundsp = "0.23.0"
rayon = "1.12.0"
serde_json = "1.0.150"
ureq = "3.3.0"

[dev-dependencies]
rudel-mini = { path = "../rudel-mini" }
rudel-lang = { path = "../rudel-lang" }
