[package]
name = "rudel-dsp"
description = "Synthesis voices for Rudel (a Rust fork of Strudel)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rudel-core = { path = "../rudel-core" }
wide.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[[bench]]
name = "supersaw"
harness = false

[[bench]]
name = "additive"
harness = false

[[bench]]
name = "vowel"
harness = false
