[package]
name = "rudel-osc"
description = "OSC output (SuperDirt-compatible) for Rudel (a Rust fork of Strudel)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rudel-core = { path = "../rudel-core" }
